Add route /auth/login
